# SourceIO_Source2Utils

./: .gitmodules  CMakeLists.txt
additional_cmake/detex/: CmakeLists.txt
additional_cmake/lz4/: CmakeLists.txt
include/: compressed_index_buffer.h  compressed_vertex_buffer.h  texture_decompressor.h  utils.hpp
libs/binary_io/: binary_io.h
src/: bindings.cpp  compressed_formats.cpp  compressed_index_buffer.cpp  compressed_vertex_buffer.cpp  texture_decompressor.cpp
